--- a/chart.html
+++ b/chart.html
@@ -40,6 +40,8 @@
           // makes tree from the data for the sample
           var dataTree = anychart.data.tree(data, 'as-table');
 
+          chart.title("last modified: 2025-12-16");
+
           // create sunburst chart
           var chart = anychart.sunburst(dataTree);
 
