--- a/chart.html
+++ b/chart.html
@@ -1,14 +1,16 @@
 <html>
 <head>
+
+  <title>Gamification Strategy Compass</title>
+
   <script src="js/anychart-base.min.js"></script>
   <script src="js/anychart-sunburst.min.js"></script>
   <script src="js/anychart-ui.min.js"></script>
   <script src="js/anychart-exports.min.js"></script>
   <script src="js/anychart-data-adapter.min.js"></script>
+
   <link href="css/anychart-ui.min.css" type="text/css" rel="stylesheet">
-
   <style type="text/css">
-
     html,
     body,
     #container {
@@ -22,18 +24,13 @@
       width: 140%;
       height: 140%;
     }
-  
-</style>
+  </style>
 </head>
 <body>
-  
   <div id="container"></div>
-  
 
   <script>
-
     anychart.onDocumentReady(function () {
-
       anychart.data.loadJsonFile(
         'data/data.json',
         function (data) {
@@ -72,7 +69,6 @@
         }
       );
     });
-  
 </script>
 </body>
 </html>
