--- a/chart.html
+++ b/chart.html
@@ -61,8 +61,9 @@
 
           // format chart tooltip
           let tooltip = chart.tooltip();
+          tooltip.name().text("Name");
           tooltip.title().text("Titel");
-          tooltip.format("{%type}\n{%description}");
+          tooltip.format("{%name}\n{%type}\n{%description}");
 
           console.log(chart);
           // set container id for the chart
