removed changes to tooltip

--- a/chart.html
+++ b/chart.html
@@ -61,9 +61,8 @@
 
           // format chart tooltip
           let tooltip = chart.tooltip();
-          tooltip.name().text("Name");
           tooltip.title().text("Titel");
-          tooltip.format("{%name}\n{%type}\n{%description}");
+          tooltip.format("{%type}\n{%description}");
 
           console.log(chart);
           // set container id for the chart
