--- a/chart.html
+++ b/chart.html
@@ -61,10 +61,11 @@
 
           // format chart tooltip
           let tooltip = chart.tooltip();
-          tooltip.title().text("Titel");
-          tooltip.format("{%type}\n{%description}");
+          //tooltip.title().text("Titel");
 
-          console.log(chart);
+          tooltip.format("{%name}\n{%type}\n{%description}");
+
+          //console.log(chart);
           // set container id for the chart
           chart.container('container');
           // initiate chart drawing
