add label to type

--- a/chart.html
+++ b/chart.html
@@ -63,7 +63,7 @@
           let tooltip = chart.tooltip();
           //tooltip.title().text("Titel");
 
-          tooltip.format("{%name}\n{%type}\n{%description}");
+          tooltip.format("{%name}\n\ntype:{%type}\n{%description}");
 
           //console.log(chart);
           // set container id for the chart
