remove additional new line

--- a/chart.html
+++ b/chart.html
@@ -62,8 +62,8 @@
           // format chart tooltip
           let tooltip = chart.tooltip();
           //tooltip.title().text("Titel");
-
-          tooltip.format("{%name}\n\ntype:{%type}\n{%description}");
+          
+          tooltip.format("{%name}\ntype:{%type}\n{%description}");
 
           //console.log(chart);
           // set container id for the chart
