--- a/chart.html
+++ b/chart.html
@@ -41,7 +41,7 @@
           // create sunburst chart
           let chart = anychart.sunburst(dataTree);
 
-          chart.title("last modified: 2026-01-03");
+          chart.title("last modified: 2026-01-04");
 
           // set calculation mode
           chart.calculationMode('ordinal-from-leaves');
@@ -63,7 +63,7 @@
           let tooltip = chart.tooltip();
           //tooltip.title().text("Titel");
 
-          tooltip.format("{%name}\ntype:{%type}\n{%description}");
+          tooltip.format("{%name}\n{%description}");
 
           //console.log(chart);
           // set container id for the chart
