--- a/chart.html
+++ b/chart.html
@@ -59,7 +59,7 @@
               : this.mainColor;
           });
 
-          chart.hoverCursor('help');
+          //chart.hoverCursor('help');
           // format chart tooltip
           let tooltip = chart.tooltip();
           //tooltip.title().text("Titel");
