--- a/chart.html
+++ b/chart.html
@@ -36,7 +36,6 @@
           // makes tree from the data for the sample
           let dataTree = anychart.data.tree(data, 'as-table');
 
-
           // create sunburst chart
           let chart = anychart.sunburst(dataTree);
 
@@ -61,6 +60,7 @@
           // create an event listener for the pointMouseOut event
           chart.listen("pointMouseOver", function(e){
             // change the cursor style
+            console.log(e.target.name());
             document.body.style.cursor = "pointer";
           });
 
@@ -70,11 +70,19 @@
             document.body.style.cursor = "auto";
           });
 
+          chart.listen("click", function(e) {
+            console.log(e.target.name());
+          });
+
           // format chart tooltip
           let tooltip = chart.tooltip();
           //tooltip.title().text("Titel");
 
-          tooltip.format("{%name}\n{%description}");
+          //tooltip.format("{%name}\n{%description}");
+          tooltip.useHtml(true);
+          // customize the format of the sunburst chart tooltip
+          tooltip.format('<h5 style="font-size:14px; margin: 0.25rem 0; border-bottom: 1px solid rgba(255,255,255,.5)">{%name}</h5><h6 style="font-size:14px; font-weight:400; margin: 0.2rem 0;"><b>{%description}</b></h6>');
+
 
           //console.log(chart);
           // set container id for the chart
