--- a/chart.html
+++ b/chart.html
@@ -38,6 +38,7 @@
       text-align: center;
       margin-left: auto;
       margin-right: auto;
+      background-color: #fff;
     }
     #overlay-close {
       position: absolute;
@@ -49,6 +50,7 @@
       text-align: center;
       padding-right: 0.25rem;
       padding-top: 0.25rem;
+      color: #000000;
     }
 
     #overlay.hide {
@@ -113,7 +115,7 @@
               console.log('Leaf clicked:', name, desc);
 
               let markup = '';
-              markup += name ? "<h2>'+name+'</h2>": "";
+              markup += name ? '<h2>'+name+'</h2>': "";
               markup += desc ? '<p>'+desc+'</p>' : '';
               if(guidance || focus || background || personalization || evaluation) {
                 markup += '<ul>';
