--- a/chart.html
+++ b/chart.html
@@ -34,17 +34,19 @@
       z-index: 1;
       top: 25vh;
       width: 50%;
-      max-height: 75vh;
+      max-height: 71vh;
       text-align: center;
       margin-left: auto;
       margin-right: auto;
+      padding: 2vw;
       background-color: #fff;
     }
     #overlay-close {
       position: absolute;
       display: block;
-      z-index: 1;
+      z-index: 2;
       right: 25vh;
+      top: 26vh;
       width: 1.5rem;
       height: 1.5rem;
       text-align: center;
@@ -64,7 +66,7 @@
 </head>
 <body>
   <div id="container"></div>D
-  <div id="overlay" class="hide"><a href="#container" title="close" id="overlay-close"></a><div id="overlay-content"></div></div>D
+  <div id="overlay" class="hide"><a href="#container" title="close" id="overlay-close">x</a><div id="overlay-content"></div></div>D
 
   <script>
 
