--- a/chart.html
+++ b/chart.html
@@ -45,15 +45,26 @@
       position: absolute;
       display: block;
       z-index: 2;
-      right: 25vh;
-      top: 26vh;
+      right: 25vw;
+      top: 25vh;
       width: 1.5rem;
       height: 1.5rem;
       text-align: center;
-      padding-right: 0.25rem;
       padding-top: 0.25rem;
       color: #000000;
+      font-weight: bold;
+      text-decoration: none;
+      border: 1px solid #000;
     }
+
+    #overlay-close:hover,
+    #overlay-close:focus,
+    #overlay-close:active {
+      color: #fff;
+      background: #000;
+    }
+
+    #overlay-close
 
     #overlay.hide {
       display: none;
