--- a/chart.html
+++ b/chart.html
@@ -18,6 +18,7 @@
       height: 100%;
       margin: 0;
       padding: 0;
+      font-family: Verdana, Helvetica, Arial, sans-serif;
     }
     #overlay {
       position: absolute;
@@ -46,7 +47,7 @@
       display: block;
       z-index: 2;
       right: 25vw;
-      top: 25vh;
+      top: 27vh;
       width: 1.5rem;
       height: 1.5rem;
       text-align: center;
@@ -66,6 +67,15 @@
 
     #overlay.hide {
       display: none;
+    }
+
+    #overlay-content ul {
+      text-align: left;
+      margin-left: 20px;
+      padding-left: 0;
+    }
+    #overlay-content p{
+      text-align: left;
     }
 
     body {
