--- a/chart.html
+++ b/chart.html
@@ -21,7 +21,7 @@
       font-family: Verdana, Helvetica, Arial, sans-serif;
     }
     #overlay {
-      position: absolute;
+      position: fixed;
       z-index: 90000;
       top: 0;
       left: 0;
