--- a/chart.html
+++ b/chart.html
@@ -31,7 +31,7 @@
     }
 
     #overlay-content {
-      position: fixed;
+      position: relative;
       z-index: 1;
       top: 25vh;
       width: 50%;
